--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,7 +51,7 @@ footer {
 
 /*item*/
 .item .panel-body{
-  height: 70px;
+  height: 120px;
 }
 .item .panel-heading {
   height: 250px;
@@ -66,3 +66,8 @@ p.item-title{
   -webkit-line-clamp: 2;
   overflow: hidden;
 }
+.item .buttons form {
+  display: inline-block;
+  margin: 0 5px;
+}
+/*user*/
