--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -38,7 +38,7 @@
         </div>
         <div class="panel-body">
           <% @have_users.each do |user| %>
-            <%= link_to user.name, users_path(user) %>
+            <%= link_to user.name, user_path(user) %>
           <% end %>
         </div>
       </div>
